--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -14,7 +14,7 @@
         
         <div class="container">
             <div class="card">
-                <a href="index.html">
+                <a href="/">
                     <img src="./assets/img/Logo.png" alt="main-logo" class="logo" />
                 </a>
                 <h2>Sua Jornada Começa Aqui!</h2>
@@ -44,7 +44,7 @@
                         </div>
                         <button type="submit" class="btn">Cadastrar</button>
                         <br><br>
-                        <b>Já possui cadastro?</b> <br> <a href='Login.html' style="text-align: center;">Faça login!</a>
+                        <b>Já possui cadastro?</b> <br> <a href='/login' style="text-align: center;">Faça login!</a>
                     </form>
                 </div>
 
