--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <!-- Header -->
+
     <div class="header">
         <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
         <label for="openSidebarMenu" class="sidebarIconToggle">
@@ -24,20 +24,20 @@
             <ul class="sidebarMenuInner">
                 <li>
                     <div>
-                        <a href="index.html">
+                        <a>
                             <img src="./assets/img/Logo.png" alt="main-logo" class="logo" />
                         </a>
                     </div>
                 </li>
-                <li><a href="dashboard.html">Home</b></li>
+                <li><a href="/dashboard">Home</b></li>
                     <li><a style="color:rgb(136, 136, 136)">Comunidade</a></li>
-                    <li><a href="jogos.html">Jogos</a></li>
-                    <li><a href="index.html">sair</a></li>
+                    <li><a href="/jogos">Jogos</a></li>
+                    <li><a id="sairBtn" >sair</a></li>
             </ul>
         </div>
     </div>
 
-    <!-- Main Content -->
+
     <div id='center' class="main center">
         <div class="centralizar" id="cardContainer">
             <div id="comu">
