--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
             <header>
                 <div class="image-clickable">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="./assets/img/Logo.png" alt="main-logo" class="logo" />
                     </a>
                 </div>
@@ -24,7 +24,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </nav>
-                <a href="Login.html"><button>Explorar Masmorras</button></a>
+                <a href="/login"><button>Explorar Masmorras</button></a>
             </header>
 
             <div class="banner">
